# DeepCrate

./: .env.example  .gitignore  CLAUDE.md  HOW-IT-WORKS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  wrangler.toml
.github/workflows/: deploy-site.yml  release-macos.yml
.packaging/DeepCrate.app/Contents/MacOS/: DeepCrateMac
.packaging/dmg/DeepCrate.app/Contents/: Info.plist
.wrangler/cache/: pages.json  wrangler-account.json
DeepCrateMac/: README.md
DeepCrateMac/Sources/DeepCrateMac/App/: DeepCrateMacApp.swift  RootView.swift
DeepCrateMac/Sources/DeepCrateMac/Core/: AppRuntime.swift  AppSettings.swift  BackendClient.swift  LiquidGlass.swift  LocalDatabase.swift  LocalModelPlanner.swift  (+3 more)
DeepCrateMac/Tests/DeepCrateMacTests/: DeepCrateMacTests.swift
deepcrate/: __init__.py  cli.py  config.py  db.py  mac_bridge.py  models.py
deepcrate/analysis/: analyzer.py
deepcrate/discovery/: spotify.py
deepcrate/export/: m3u.py  rekordbox.py
deepcrate/gui/: app.py  services.py  worker.py
deepcrate/planning/: gaps.py  planner.py  prompts.py  scoring.py
digcrate/: __init__.py  cli.py  config.py  db.py  mac_bridge.py  models.py
digcrate/analysis/: analyzer.py  camelot.py  scanner.py
digcrate/discovery/: spotify.py
digcrate/export/: m3u.py  rekordbox.py
digcrate/gui/: __init__.py  app.py  services.py
digcrate/planning/: gaps.py  planner.py  prompts.py  scoring.py
scripts/: package-macos-app.sh
tests/: test_analyzer.py  test_camelot.py  test_planner.py  test_scoring.py
website/: index.html  privacy.html  wrangler.jsonc
(+7 files in other folders)
