[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digcrate"
version = "0.1.0"
description = "DigCrate — AI-powered DJ set builder"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "mutagen>=1.47.0",
    "openai>=1.0.0",
    "spotipy>=2.23.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "PySide6>=6.8.0",
]

[project.scripts]
digcrate = "digcrate.cli:app"
digcrate-gui = "digcrate.gui.app:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
